[gd_scene load_steps=5 format=3 uid="uid://n7oxl4i8smas"]

[ext_resource type="Script" path="res://ui/phone/equip_panel/pack_viewer.gd" id="1_ixf6o"]
[ext_resource type="PackedScene" uid="uid://ba6rrbnc23vi1" path="res://ui/widgets/item_viewer.tscn" id="2_jah6f"]
[ext_resource type="LabelSettings" uid="uid://bpr6t2q1y56ln" path="res://ui/themes/label_settings/info_label_settings.tres" id="3_px5sg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2bo8"]
bg_color = Color(1, 1, 1, 0.117647)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[node name="PackViewer" type="Control"]
custom_minimum_size = Vector2(118, 118)
layout_mode = 3
anchors_preset = 0
offset_right = 118.0
offset_bottom = 118.0
mouse_filter = 2
script = ExtResource("1_ixf6o")

[node name="Quality" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q2bo8")

[node name="ItemViewer" parent="." instance=ExtResource("2_jah6f")]

[node name="CountLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 120.0
offset_bottom = 120.0
text = "x10"
label_settings = ExtResource("3_px5sg")
horizontal_alignment = 2
vertical_alignment = 2
